tests/baselines/reference/parserErrorRecoveryIfStatement4.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement4.ts(3,9): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement4.ts(4,3): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement4.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b)
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      ~
!!! error TS1109: Expression expected.
      f2() {
      }
      f3() {
      }
    }